# opticaltoolkit

./: .editorconfig  .gitignore  Makefile  README.md  TODO.txt  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: auto-test.yml  code-format.yml  deploy.yml  release.yml
optical_toolkit/analyze/: analyze.py
optical_toolkit/analyze/functions/: summary_statistics.py
optical_toolkit/core/: __init__.py  min_max_normalize.py  preprocess.py  standardize.py
optical_toolkit/insight/: cnn_filters.py
optical_toolkit/insight/functions/: filter_patterns.py  models_and_layers.py  stitched_image.py
optical_toolkit/visualize/: embeddings.py  visualize_embeddings.py  visualize_images.py
optical_toolkit/visualize/functions/: manifolds.py
tests/: test_analyze.py  test_cnn_filters.py  test_convolve.py  test_embeddings.py  test_optim_viz.py  test_visualizations.py
